refactor the use of Lombok